# practice-messenger

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
client/: CMakeLists.txt  client_handler_qml.cpp  client_handler_qml.hpp  error_codes_handler_qml.hpp  main.cpp  network_bridge.hpp  token_storage.hpp
client/qml/: AuthScreen.qml  ChatListPage.qml  DirectMessagePage.qml  FriendsPage.qml  GeneralChat.qml  Main.qml  MainScreen.qml  Sidebar.qml  SidebarButton.qml  Toast.qml  test.qml
include/: cast.hpp  client_async_handler.hpp  client_session.hpp  codes.hpp  crypto.hpp  database.hpp  literals.hpp  logger.hpp  messages.hpp  messages_old.hpp  network_session.hpp  protocol.hpp  token_cleaner.hpp
include/handlers/: client_handler.hpp  packet_handler.hpp
include/repositories/: friend_repository.hpp  message_repository.hpp  user_repository.hpp
include/services/: chat_service.hpp  session_manager.cpp  session_manager.hpp
include/structs/: direct_message.hpp  last_message.hpp  stored_message.hpp  user.hpp
server/: CMakeLists.txt  main.cpp
testing/: CMakeLists.txt  main.cpp
